--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,7 +5,7 @@
   --foreground: #000;
   --primary: #824ff8;
   --scondary: #74d255;
-  font-family: var(--font-inter), sans-serif;
+  --font-sans: var(--font-inter);
 }
 
 @theme inline {
@@ -28,5 +28,5 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Inter, sans-serif;
+  font-family: var(--font-inter);
 }
